--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,7 @@
 {
-  "recommendations": ["Vue.volar"]
+  "recommendations": [
+    "vue.volar",
+    "alefragnani.bookmarks",
+    "streetsidesoftware.code-spell-checker"
+  ]
 }
