feat: strict package util with pnpm

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "lint": "eslint src/**/*.{js,jsx,vue,ts,tsx} --fix",
     "lint:style": "stylelint src/**/*.{css,scss,vue,html} --fix",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
     "axios": "^0.27.2",
@@ -31,6 +32,7 @@
     "eslint-plugin-vue": "^9.3.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
+    "only-allow": "^1.1.1",
     "postcss-html": "^1.5.0",
     "postcss-scss": "^4.0.4",
     "sass": "^1.54.0",
