--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "commit": "git-cz"
   },
   "dependencies": {
+    "@vueuse/core": "^9.12.0",
     "axios": "^0.27.2",
     "pinia": "^2.0.17",
     "vue": "^3.2.37",
@@ -21,11 +22,11 @@
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
-    "commitizen": "^4.3.0",
-    "commitlint-config-cz": "^0.13.3",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
     "@vitejs/plugin-vue": "^3.0.0",
+    "commitizen": "^4.3.0",
+    "commitlint-config-cz": "^0.13.3",
     "cz-customizable": "^7.0.0",
     "eslint": "^8.0.1",
     "eslint-config-standard": "^17.0.0",
@@ -36,6 +37,7 @@
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "only-allow": "^1.1.1",
+    "postcss": "^8.4.21",
     "postcss-html": "^1.5.0",
     "postcss-scss": "^4.0.4",
     "sass": "^1.54.0",
